binrw/tests/ui/named_args_unsupported_tuple_struct.stderr
error: tuple structs are not supported
 --> tests/ui/named_args_unsupported_tuple_struct.rs:4:14
  |
4 | struct Tuple(u32, String);
  |              ^^^
