binrw/tests/ui/named_args_unsupported_tuple_struct.rs
use binrw::NamedArgs;

#[derive(NamedArgs)]
struct Tuple(u32, String);

fn main() {}
